home-k8s-cluster/workloads/manifests/kube-prometheus/custom-manifests/redirect-middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: redirecthttps
  namespace: monitoring
spec:
  redirectScheme:
    scheme: https
    permanent: true
