home-k8s-cluster/workloads/manifests/kube-prometheus/custom-manifests/prometheus-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: prometheus-k8s-ingress-network-policy
  namespace: monitoring
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/component: prometheus
      app.kubernetes.io/instance: k8s
      app.kubernetes.io/name: prometheus
      app.kubernetes.io/part-of: kube-prometheus
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: traefik
          podSelector:
            matchLabels:
              app.kubernetes.io/name: traefik
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus-k8s-https
  namespace: monitoring
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`prometheus.home.maxanderson.tech`)
      priority: 10
      services:
        - name: prometheus-k8s
          port: 9090
          scheme: http
  tls: {} # Don't specify TLS and allow Traefik to select the default TLS store
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus-k8s-http
  namespace: monitoring
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`prometheus.home.maxanderson.tech`) && PathPrefix(`/`)
      kind: Rule
      middlewares:
        - name: redirecthttps
          namespace: monitoring
      services:
        - name: proemetheus-k8s
          port: 9090
